add: edit delete buttons

--- a/views/worker/worker-edit.html
+++ b/views/worker/worker-edit.html
@@ -71,6 +71,7 @@
                     <th>Tgl Akhir</th>
                     <th>Status</th>
                     <th>Pegawai</th>
+                    <th></th>
                 </tr>
                 {{ range $index, $task := .tasks}}
                 <tr>
@@ -81,6 +82,10 @@
                     <td>{{ $task.EndDate.Format "2 Jan 2006" }}</td>
                     <td>{{ $task.Done }}</td>
                     <td>{{ $task.WorkerID }}</td>
+                    <td>
+                        <a href="/tasks/{{ $task.ID }}/edit">Edit</a>
+                        <a href="/tasks/{{ $task.ID }}/delete">Hapus</a>
+                    </td>
                 </tr>
                 {{ end }}
             </table>
