--- a/resources/css/input.css
+++ b/resources/css/input.css
@@ -7,4 +7,19 @@
     body {
         @apply font-poppins
     }
+
+    table tr td, table tr th {
+        @apply border border-gray-400 px-2 py-1
+    }
+    table tr th {
+        @apply font-semibold
+    }
+
+    input[type="text"], input[type="date"], textarea, select {
+        @apply w-full p-2 rounded-lg shadow-md border border-gray-200
+    }
+
+    label {
+        @apply text-xs font-semibold uppercase
+    }
 }
