--- a/views/worker/index.html
+++ b/views/worker/index.html
@@ -18,7 +18,7 @@
     <div class="w-full lg:w-11/12 m-auto h-screen flex space-x-2 items-start justify-center pt-12">
         <div class="bg-white p-4 rounded-xl shadow-xl w-full lg:w-1/2">
             <h1 class="font-bold text-2xl mb-4">Daftar Task</h1>
-            
+
             <form action="/tasks/store" method="post" class="flex flex-col gap-3 mb-4">
                 <div class="w-full">
                     <label>Nama task</label>
@@ -47,14 +47,13 @@
                 <div class="w-full">
                     <label>Karyawan</label>
                     <select name="worker_id">
-                        <option value="1">Worker #1</option>
-                        <option value="2">Worker #2</option>
-                        <option value="3">Worker #3</option>
-                        <option value="4">Worker #4</option>
-                        <option value="5">Worker #5</option>
+                        {{ range $worker := .workers }}
+                            <option value="{{ $worker.ID }}">{{ $worker.Name }}</option>
+                        {{ end }}
                     </select>
                 </div>
-                <input type="submit" class="w-full bg-lime-300 px-4 py-2 rounded-lg shadow-sm hover:shadow-md hover:-translate-y-1 active:translate-y-1 transition-all duration-200 ease-in-out">
+                <input type="submit"
+                    class="w-full bg-lime-300 px-4 py-2 rounded-lg shadow-sm hover:shadow-md hover:-translate-y-1 active:translate-y-1 transition-all duration-200 ease-in-out">
             </form>
 
 
@@ -76,8 +75,14 @@
                     <td>{{ $task.Description }}</td>
                     <td>{{ $task.StartDate.Format "2 Jan 2006" }}</td>
                     <td>{{ $task.EndDate.Format "2 Jan 2006" }}</td>
-                    <td>{{ $task.Done }}</td>
-                    <td>{{ $task.WorkerID }}</td>
+                    <td>
+                        {{ if $task.Done }}
+                            ✅ Selesai
+                        {{ else }}
+                            ❌ Belum Selesai
+                        {{ end }}
+                    </td>
+                    <td>{{ $task.Worker.Name }}</td>
                     <td>
                         <a href="/tasks/{{ $task.ID }}/edit">Edit</a>
                         <a href="/tasks/{{ $task.ID }}/delete" onclick="return confirm('Anda yakin?')">Hapus</a>
@@ -87,7 +92,7 @@
             </table>
         </div>
         <div class="bg-white p-4 rounded-xl shadow-xl w-full lg:w-1/2">
-            <h1 class="font-bold text-2xl">Daftar Pegawai</h1>            
+            <h1 class="font-bold text-2xl">Daftar Pegawai</h1>
             <form action="/workers/store" method="post" class="flex flex-col gap-3 mb-4">
                 <div class="w-full">
                     <label>Nama</label>
@@ -99,7 +104,7 @@
                 </div>
                 <div class="w-full">
                     <label>Gender</label>
-                    <br/>
+                    <br />
                     <label>
                         <input type="radio" value="L" name="gender">
                         Laki-laki
@@ -113,7 +118,8 @@
                     <label>Alamat</label>
                     <textarea placeholder="Alamat pegawai" name="address"></textarea>
                 </div>
-                <input type="submit" class="w-full bg-lime-300 px-4 py-2 rounded-lg shadow-sm hover:shadow-md hover:-translate-y-1 active:translate-y-1 transition-all duration-200 ease-in-out">
+                <input type="submit"
+                    class="w-full bg-lime-300 px-4 py-2 rounded-lg shadow-sm hover:shadow-md hover:-translate-y-1 active:translate-y-1 transition-all duration-200 ease-in-out">
             </form>
             <table class="table w-full">
                 <tr>
