--- a/views/worker/task-edit.html
+++ b/views/worker/task-edit.html
@@ -51,11 +51,9 @@
                 <div class="w-full">
                     <label>Karyawan</label>
                     <select name="worker_id">
-                        <option value="1">Worker #1</option>
-                        <option value="2">Worker #2</option>
-                        <option value="3">Worker #3</option>
-                        <option value="4">Worker #4</option>
-                        <option value="5">Worker #5</option>
+                        {{ range $worker := .workers }}
+                            <option value="{{ $worker.ID }}">{{ $worker.Name }}</option>
+                        {{ end }}
                     </select>
                 </div>
                 <input type="submit" class="w-full bg-lime-300 px-4 py-2 rounded-lg shadow-sm hover:shadow-md hover:-translate-y-1 active:translate-y-1 transition-all duration-200 ease-in-out">
@@ -80,18 +78,75 @@
                     <td>{{ $task.Description }}</td>
                     <td>{{ $task.StartDate.Format "2 Jan 2006" }}</td>
                     <td>{{ $task.EndDate.Format "2 Jan 2006" }}</td>
-                    <td>{{ $task.Done }}</td>
-                    <td>{{ $task.WorkerID }}</td>
+                    <td>
+                        {{ if $task.Done }}
+                            ✅ Selesai
+                        {{ else }}
+                            ❌ Belum Selesai
+                        {{ end }}
+                    </td>
+                    <td>{{ $task.Worker.Name }}</td>
                     <td>
                         <a href="/tasks/{{ $task.ID }}/edit">Edit</a>
-                        <a href="/tasks/{{ $task.ID }}/delete">Hapus</a>
+                        <a href="/tasks/{{ $task.ID }}/delete" onclick="return confirm('Anda yakin?')">Hapus</a>
                     </td>
                 </tr>
                 {{ end }}
             </table>
         </div>
         <div class="bg-white p-4 rounded-xl shadow-xl w-full lg:w-1/2">
-            <h1 class="font-bold text-2xl">Daftar Pegawai</h1>            
+            <h1 class="font-bold text-2xl">Daftar Pegawai</h1>
+            <form action="/workers/store" method="post" class="flex flex-col gap-3 mb-4">
+                <div class="w-full">
+                    <label>Nama</label>
+                    <input type="text" placeholder="Nama Pegawai ..." name="name">
+                </div>
+                <div class="w-full">
+                    <label>Posisi jabatan</label>
+                    <input type="text" placeholder="Posisi jabatan pegawai ..." name="position">
+                </div>
+                <div class="w-full">
+                    <label>Gender</label>
+                    <br />
+                    <label>
+                        <input type="radio" value="L" name="gender">
+                        Laki-laki
+                    </label>
+                    <label>
+                        <input type="radio" value="P" name="gender">
+                        Perempuan
+                    </label>
+                </div>
+                <div class="w-full">
+                    <label>Alamat</label>
+                    <textarea placeholder="Alamat pegawai" name="address"></textarea>
+                </div>
+                <input type="submit"
+                    class="w-full bg-lime-300 px-4 py-2 rounded-lg shadow-sm hover:shadow-md hover:-translate-y-1 active:translate-y-1 transition-all duration-200 ease-in-out">
+            </form>
+            <table class="table w-full">
+                <tr>
+                    <th>No</th>
+                    <th>Nama</th>
+                    <th>Position</th>
+                    <th>Gender</th>
+                    <th>Address</th>
+                    <th></th>
+                </tr>
+                {{ range $index, $workerItem := .workers}}
+                <tr>
+                    <td>{{ $index }}</td>
+                    <td>{{ $workerItem.Name }}</td>
+                    <td>{{ $workerItem.Position }}</td>
+                    <td>{{ $workerItem.Gender }}</td>
+                    <td>{{ $workerItem.Address }}</td>
+                    <td>
+                        <a href="/workers/{{ $workerItem.ID }}/edit">Edit</a>
+                        <a href="/workers/{{ $workerItem.ID }}/delete" onclick="return confirm('Anda yakin?')">Hapus</a>
+                    </td>
+                </tr>
+                {{ end }}
+            </table>
         </div>
     </div>
 </body>
